[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Masato Nakata <masaton@naughie.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/lita-tokenizers"
homepage = "https://github.com/naughie/lita-tokenizers"

[profile.release-minified]
inherits = "release"
lto = true
strip = "symbols"

[workspace.dependencies]
kytea-sys = { path = "./crates/kytea-sys", version = "0.1.0" }
mecab-sys = { path = "./crates/mecab-sys", version = "0.1.0" }

tokenizers-core = { path = "./crates/lita-tokenizers-core", package = "lita-tokenizers-core", version = "0.1.0" }
tokenizers-utils = { path = "./crates/lita-tokenizers-utils", package = "lita-tokenizers-utils", default-features = false, version = "0.1.1" }
tokenizers-api = { path = "./crates/lita-tokenizers", package = "lita-tokenizers", default-features = false, version = "0.1.0" }

tokenizers-kytea = { path = "./crates/lita-tokenizers-kytea", package = "lita-tokenizers-kytea", version = "0.1.0" }
tokenizers-mecab = { path = "./crates/lita-tokenizers-mecab", package = "lita-tokenizers-mecab", version = "0.1.0" }
tokenizers-whitespace = { path = "./crates/lita-tokenizers-whitespace", package = "lita-tokenizers-whitespace", version = "0.1.0" }

escaped-delimiter = "0.2"
memchr = "2.8"
simdutf8 = "0.1"

async-fs = "2.2"
futures-executor = "0.3"
futures-io = "0.3"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
