[package]
name = "lita-tokenizers-cli"
version = "0.1.0"

description = "CLI for LiTA tokenizers."

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["decode", "kytea", "mecab"]

decode = ["tokenizers-api/decode"]

kytea = ["tokenizers-api/kytea"]
mecab = ["tokenizers-api/mecab"]

[dependencies]
tokenizers-api.workspace = true

anyhow = "1"
clap = { version = "4.6", features = ["derive"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
