[package]
name = "lita-tokenizers-mecab"
version = "0.1.0"

description = "The implementation of lita-tokenizers-core for mecab-sys."

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokenizers-core.workspace = true
tokenizers-utils = { workspace = true, features = ["str"] }
mecab-sys.workspace = true
